--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,17 @@
     border-width: 1px;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
 .sec1-image img {
     width: auto;
     height: 200px;
@@ -12,4 +23,41 @@
     width: 120px;
     height: 120px;
 
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.header {
+    display: flex;
+    background-color: orange;
+}
+
+.sec1 {
+    display: flex;
+    background-color: blue;
+}
+
+.sec2 {
+    display: flex;
+    background-color: yellow;
+}
+
+.sec3 {
+    display: flex;
+    flex-direction: column;
+    background-color: blueviolet;
+}
+
+.sec4 {
+    display: flex;
+    background-color: green;
+}
+
+.footer {
+    display: flex;
+    background-color: pink;
+    justify-content: center;
 }
