--- a/styles/style.css
+++ b/styles/style.css
@@ -3,20 +3,59 @@
     border-width: 1px;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
 
 a {
     text-decoration: none;
     color: black;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+    padding-left: 60px;
+    padding-right: 60px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    background-color: orange;
+    height: 40px;
+}
+
+.header-links ul{
+    display: flex;
+    gap: 30px;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.mid-secs {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.sec1 {
+    display: flex;
+    background-color: blue;
+    flex: 1;
+}
+
 .sec1-image img {
     width: auto;
     height: 200px;
+}
+
+.sec2 {
+    display: flex;
+    flex-direction: column;
+    background-color: yellow;
+    flex: 1;
 }
 
 .sec2-squares img {
@@ -25,39 +64,31 @@ a {
 
 }
 
-body {
+.sec2-squares {
     display: flex;
-    flex-direction: column;
-}
-
-.header {
-    display: flex;
-    background-color: orange;
-}
-
-.sec1 {
-    display: flex;
-    background-color: blue;
-}
-
-.sec2 {
-    display: flex;
-    background-color: yellow;
 }
 
 .sec3 {
     display: flex;
     flex-direction: column;
     background-color: blueviolet;
+    flex: 1;
 }
 
 .sec4 {
     display: flex;
     background-color: green;
+    flex: 1;
+}
+
+.sec4-ad {
+    display: flex;
 }
 
 .footer {
     display: flex;
     background-color: pink;
     justify-content: center;
+    align-items: center;
+    height: 40px;
 }
