--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
     flex-direction: column;
     height: 100vh;
     margin: 0;
-    overflow: hidden;
+    /*overflow: hidden;*/
     padding-left: 60px;
     padding-right: 60px;
 }
@@ -23,7 +23,7 @@ body {
     display: flex;
     justify-content: space-between;
     background-color: orange;
-    height: 40px;
+    height: 60px;
 }
 
 .header-links ul{
@@ -44,11 +44,32 @@ body {
     display: flex;
     background-color: blue;
     flex: 1;
+    /*gap: 20px;*/
+    /*flex-wrap: wrap;*/
+}
+
+.sec1-content,
+.sec1-image {
+    flex: 1;
+    
+}
+
+.sec1-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+.sec1-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .sec1-image img {
-    width: auto;
-    height: 200px;
+    max-width: 100%;
+    height: 70%;
 }
 
 .sec2 {
@@ -58,14 +79,21 @@ body {
     flex: 1;
 }
 
+.sec2-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .sec2-squares img {
     width: 120px;
     height: 120px;
-
 }
 
 .sec2-squares {
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .sec3 {
@@ -73,6 +101,20 @@ body {
     flex-direction: column;
     background-color: blueviolet;
     flex: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+.sec3-quote {
+   
+}
+
+.sec3-content {
+    font-size: 36px;
+}
+
+.sec3-credit {
+ 
 }
 
 .sec4 {
