--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,17 @@
     border-width: 1px;
     /* padding: 10px;*/
 
+
+.header,
+.footer,
+.box1,
+.box2,
+.box3,
+.box4 {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
 .contain {
     margin: 0 px;
     padding: 0 px;
@@ -28,7 +39,8 @@ a {
 body {
     display: flex;
     flex-direction: column;
-    background-color: beige;
+    padding: 0;
+    margin: 0;
 }
 
 .header {
@@ -36,6 +48,13 @@ body {
     display: flex;
     justify-content: space-between;
     background-color: #D64045;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.header-text {
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header-logo {
@@ -53,11 +72,12 @@ body {
 .content {
     display: flex;
     flex-direction: column;
-    flex: 85%;
+    flex: 80%;
 }
 
 .footer {
-    flex: 5%;
+    flex: 10%;
+    min-height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,6 +105,7 @@ img{
     flex-wrap: wrap;
     gap: 30px;
     background-color: #D64045;
+    padding-bottom: 30px;
 }
 
 .box1content,
@@ -99,6 +120,13 @@ img{
 
 .box1content p {
     word-break: break-word;
+    font-size: 18px;
+}
+
+.box1content h2 {
+    font-size: 48px;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 
@@ -120,7 +148,7 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
     flex-wrap: wrap;
 }
 
